# esp32s3

./: .gitignore  AUTO_ALL.bat  CMakeLists.txt  FLASH.bat  LD2410配置指南.md  README.md  REBUILD_8MB.bat  RUN_ME.bat  _check_build.bat  build_bg.bat  build_flash.bat  build_ninja.bat  build_p3.bat  list_ports.py  partitions.csv  read_serial.py  sdkconfig  sdkconfig.defaults  硬件接线表.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/APP/: uart_probe.c
main/camera/: camera_diag.c  camera_diag.h  camera_ov2640.c  camera_ov2640.h
main/lcd/: lcd_font.c  lcd_font_cn.c  lcd_font_cn.h  lcd_st7789.c  lcd_st7789.h
main/net/: wifi_mjpeg.c  wifi_mjpeg.h
main/sensor/: adc1_bus.c  adc1_bus.h  air_mq135.c  air_mq135.h  radar_ld2410.c  radar_ld2410.h  water_sensor.c  water_sensor.h
tools/: append_main.py  dump_hex.py  fix_main_cn.py  gen_ex_table.py  gen_font_cn.py  pc_yolo_fall.py
